[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Telegram Media Downloader Bot"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytelegrambotapi>=4.34.0",
    "requests>=2.34.2",
    "ta>=0.11.0",
    "yt-dlp>=2025.1.15",
]
